--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ target/
 .springBeans
 .sts4-cache
 
+### application.yml ###
+src/main/resources/application.yml
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
